cambiar de lugar carpeta sass

--- a/pages/ppff.html
+++ b/pages/ppff.html
@@ -108,5 +108,7 @@
         <div class="pie_de_pagina_copy">
             <p>Diseño por Jonatan</p>
         </div>    
-    </footer></body>
+    </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
