--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>HG-MATES</title>
 </head>
 <body>
@@ -49,17 +50,17 @@
         <section class="beneficios-section">
             <h2>Beneficios del Mate</h2>
 
-            <div class="beneficio">
+            <div class="beneficio" data-aos="fade-right">
                 <h3><i class="fas fa-brain"></i> Estimulación del sistema nervioso central</h3>
                 <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando energía.</p>
             </div>
 
-            <div class="beneficio">
+            <div class="beneficio" data-aos="fade-left">
                 <h3><i class="fas fa-weight"></i> Ayuda en la pérdida de peso</h3>
                 <p>El mate puede contribuir a la pérdida de peso y a la prevención de la diabetes.</p>
             </div>
 
-            <div class="beneficio">
+            <div class="beneficio" data-aos="fade-right">
                 <h3><i class="fas fa-heartbeat"></i> Prevención de enfermedades cardiovasculares</h3>
                 <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y reducir los niveles de colesterol malo.</p>
             </div>
@@ -68,7 +69,7 @@
         <section>
 
             <h2 class="titulos">DESTACADOS</h2> 
-            <div class="tarjetas">
+            <div class="tarjetas" data-aos="zoom-out-up">
                 <div class="card tarjetas2">
                     <img src="./assets/productos/mateImperial.jpg" class="card-img-top" alt="imagen de imperial marron">
                     <div class="card-body">
@@ -77,7 +78,7 @@
                         <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
-                <div class="card tarjetas2">
+                <div class="card tarjetas2" data-aos="zoom-out-up">
                     <img src="./assets/productos/termo1.jpg" class="card-img-top" alt="imagen de termo negro">
                     <div class="card-body">
                         <h5 class="card-title">TERMOS</h5>
@@ -85,7 +86,7 @@
                         <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
-                <div class="card tarjetas2" >
+                <div class="card tarjetas2" data-aos="zoom-out-up">
                     <img src="./assets/productos/cuchillo1.png" class="card-img-top" alt="imagen de cuchillo">
                     <div class="card-body">
                         <h5 class="card-title">CUCHILLOS</h5>
@@ -114,8 +115,8 @@
                 </a>    
             </div>
             <div>
-                <H3>CONTACTENOS</H3>
-                <p>TELEFONO: 11-33665545 </BR>
+                <h3>CONTACTENOS</h3>
+                <p>TELEFONO: 11-33665545 </p>
                 DIRECCION: AV DIAZ MOSCONI 1524 </BR>
                 LOCALIDAD: LOMAS DEL MIRADOR </BR>
                 PROVINCIA : BS AS  </BR>
@@ -123,8 +124,8 @@
                 </p>
             </div>
             <div>
-                <H3>NEWSLETTER</H3>
-                <P>SUSCRIBASE </P>
+                <h3>NEWSLETTER</h3>
+                <P>SUSCRIBASE </p>
                 <form method="post" action="/send"> CORREO: <input name="correo">
                 <input type="submit" value="Suscribir">
                 </form>
@@ -134,6 +135,10 @@
             <p>Diseño por Jonatan</p>
         </div>    
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script> </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
