cambiar de lugar carpeta sass2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>HG-MATES</title>
 </head>
 <body>
@@ -28,19 +29,13 @@
 
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/sobrenosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/clientes.html">CLIENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/ppff.html">PREGUNTAS FRECUENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/sobrenosotros.html">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/clientes.html">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/ppff.html">Preguntas Frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contactos</a></li>
                 </ul>
-                <form class="d-flex align-items-center" role="search">
-                    <div class="input-group search-input">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
-                        <span class="input-group-text search-shortcut">Buscar</span>
-                    </div>
-                </form>
                 <img src="./assets/iconos/avatar.png" alt="icono login">
                 <img src="./assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
@@ -115,13 +110,12 @@
                 </a>    
             </div>
             <div>
-                <h3>CONTACTENOS</h3>
-                <p>TELEFONO: 11-33665545 </p>
-                DIRECCION: AV DIAZ MOSCONI 1524 </BR>
-                LOCALIDAD: LOMAS DEL MIRADOR </BR>
-                PROVINCIA : BS AS  </BR>
-                CORREO ELECTRONICO: HGMATES@GMAIL.COM 
-                </p>
+                <h3>Contactenos</h3>
+                <p>Telefono: 11-33665545 </p>
+                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
+                <p>Localidad: LOMAS DEL MIRADOR </p>
+                <p>Provincia : BS AS  </p>
+                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
             </div>
             <div>
                 <h3>NEWSLETTER</h3>
