--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,7 @@
     <!--Link de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>HG MATES - Contacto</title>
 </head>
 <body>
@@ -26,19 +27,13 @@
 
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ppff.html">PREGUNTAS FRECUENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="clientes.html">clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="">CONTACTO</a></li>
                 </ul>
-                <form class="d-flex align-items-center" role="search">
-                    <div class="input-group search-input">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
-                        <span class="input-group-text search-shortcut">Buscar</span>
-                    </div>
-                </form>
                 <img src="../assets/iconos/avatar.png" alt="icono login">
                 <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
@@ -103,13 +98,12 @@
                 </a>    
             </div>
             <div>
-                <H3>CONTACTENOS</H3>
-                <p>TELEFONO: 11-33665545 </BR>
-                DIRECCION: AV DIAZ MOSCONI 1524 </BR>
-                LOCALIDAD: LOMAS DEL MIRADOR </BR>
-                PROVINCIA : BS AS  </BR>
-                CORREO ELECTRONICO: HGMATES@GMAIL.COM 
-                </p>
+                <h3>Contactenos</h3>
+                <p>Telefono: 11-33665545 </p>
+                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
+                <p>Localidad: LOMAS DEL MIRADOR </p>
+                <p>Provincia : BS AS  </p>
+                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
             </div>
             <div>
                 <H3>NEWSLETTER</H3>
