--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>HG MATES - SOBRE NOSOTROS</title>
 </head>
 <body>
@@ -28,19 +29,13 @@
 
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ppff.html">PREGUNTAS FRECUENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="clientes.html">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 </ul>
-                <form class="d-flex align-items-center" role="search">
-                    <div class="input-group search-input">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
-                        <span class="input-group-text search-shortcut">Buscar</span>
-                    </div>
-                </form>
                 <img src="../assets/iconos/avatar.png" alt="icono login">
                 <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
