cambiar de lugar carpeta sass3

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div>
                 <h3>NEWSLETTER</h3>
                 <P>SUSCRIBASE </p>
-                <form method="post" action="/send"> CORREO: <input name="correo">
+                <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
                 <input type="submit" value="Suscribir">
                 </form>
             </div>
