--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -93,12 +93,12 @@
                 </a>    
             </div>
             <div>
-                <H3>CONTACTENOS</H3>
-                <p>TELEFONO: 11-33665545 </BR>
-                DIRECCION: AV DIAZ MOSCONI 1524 </BR>
-                LOCALIDAD: LOMAS DEL MIRADOR </BR>
-                PROVINCIA : BS AS  </BR>
-                CORREO ELECTRONICO: HGMATES@GMAIL.COM 
+                <h3>Contactenos</h3>
+                <p>Telefono: 11-33665545 </p>
+                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
+                <p>Localidad: LOMAS DEL MIRADOR </p>
+                <p>Provincia : BS AS  </p>
+                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
                 </p>
             </div>
             <div>
