cambios en footer con font awasome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>HG-MATES</title>
 </head>
 <body>
@@ -94,20 +93,13 @@
     </main> 
     <footer class="pie_de_pagina">
         <div class="pie_de_pagina_grid">
-            <div>
-                <h3>NUESTRAS REDES</h3>
-                <a href="https://www.x.com" target="_blank">
-                    <img src="./assets/redesSociales/logoX.png" alt="logo twitter">
-                </a>
-                <a href="https://www.instagram.com/hgmates" target="_blank">
-                    <img src="./assets/redesSociales/logoIg.png" alt="logo ig">
-                </a>   
-                <a href="https://www.facebook.com" target="_blank">
-                    <img src="./assets/redesSociales/logoFb.png" alt="logo facebook">
-                </a>     
-                    <a href="https://www.tiktok.com" target="_blank">
-                    <img src="./assets/redesSociales/tiktok.png" alt="logo facebook">
-                </a>    
+            <div class="redes">
+            <h3>NUESTRAS REDES</h3>
+
+            <a href="https://www.x.com" target="_blank" class="fa-brands fa-x-twitter"></a>
+            <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
+            <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
+            <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
             </div>
             <div>
                 <h3>Contactenos</h3>
