--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>HG MATES - SOBRE NOSOTROS</title>
 </head>
 <body>
@@ -79,19 +79,11 @@
         <div class="pie_de_pagina_grid">
             <div>
                 <h3>NUESTRAS REDES</h3>
-                <a href="https://www.x.com" target="_blank">
-                    <img src="../assets/redesSociales/logoX.png" alt="logo twitter">
-                </a>
-                <a href="https://www.instagram.com/hgmates" target="_blank">
-                    <img src="../assets/redesSociales/logoIg.png" alt="logo ig">
-                </a>   
-                <a href="https://www.facebook.com" target="_blank">
-                    <img src="../assets/redesSociales/logoFb.png" alt="logo facebook">
-                </a>     
-                    <a href="https://www.tiktok.com" target="_blank">
-                    <img src="../assets/redesSociales/tiktok.png" alt="logo facebook">
-                </a>    
+                <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
+                <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
+                <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
             </div>
+
             <div>
                 <h3>Contactenos</h3>
                 <p>Telefono: 11-33665545 </p>
