--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -77,7 +77,7 @@
     </main>
     <footer class="pie_de_pagina">
         <div class="pie_de_pagina_grid">
-            <div>
+            <div class="redes">
                 <h3>NUESTRAS REDES</h3>
                 <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
                 <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
