--- a/pages/ppff.html
+++ b/pages/ppff.html
@@ -74,7 +74,7 @@
                 <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
                 <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
             </div>
-            <div>
+            <div class="redes">
                 <h3>Contactenos</h3>
                 <p>Telefono: 11-33665545 </p>
                 <p>Direccion: AV DIAZ MOSCONI 1524 </p>
