--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -31,12 +31,14 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">CLIENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Clientes</a></li>
                     <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 </ul>
-                <img src="../assets/iconos/avatar.png" alt="icono login">
-                <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
+                <div class="icono-contenedor">
+                    <i class="fas fa-user-circle icono"></i> 
+                    <i class="fas fa-shopping-cart icono"></i>
+                </div>
             </div>
         </nav>
     </header>
