--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -36,8 +36,10 @@
                     <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 </ul>
-                <img src="../assets/iconos/avatar.png" alt="icono login">
-                <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
+                <div class="icono-contenedor">
+                    <i class="fas fa-user-circle icono"></i> 
+                    <i class="fas fa-shopping-cart icono"></i>
+                </div>
             </div>
         </nav>
     </header>
