--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,10 +32,12 @@
                     <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="clientes.html">clientes</a></li>
                     <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Contacto</a></li>
                 </ul>
-                <img src="../assets/iconos/avatar.png" alt="icono login">
-                <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
+                <div class="icono-contenedor">
+                    <i class="fas fa-user-circle icono"></i> 
+                    <i class="fas fa-shopping-cart icono"></i>
+                </div>
             </div>
         </nav>
     </header>
