cambios generales para entrega final

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +10,23 @@
     <!--Link archivos de estilos-->
     <link rel="stylesheet" href="./styles/style.css">
     <!--Link de bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>HG-MATES</title>
 </head>
+
 <body>
     <header class="fondo_encabezado">
         <nav class="navbar navbar-expand-lg navbar-custom px-3">
-    <!--Este es el titulo de mi pagina-->
-                <h1 class="titulos">HGMATES</h1>
-                <img id="logo_principal" src="./assets/logos/logoHG.png" alt="Logo marca">
+            <!--Este es el titulo de mi pagina-->
+            <h1 class="titulos">HGMATES</h1>
+            <img id="logo_principal" src="./assets/logos/logoHG.png" alt="Logo marca">
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+                aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -36,7 +40,7 @@
                     <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contactos</a></li>
                 </ul>
                 <div class="icono-contenedor">
-                    <i class="fas fa-user-circle icono"></i> 
+                    <i class="fas fa-user-circle icono"></i>
                     <i class="fas fa-shopping-cart icono"></i>
                 </div>
             </div>
@@ -48,7 +52,8 @@
 
             <div class="beneficio" data-aos="fade-right">
                 <h3><i class="fas fa-brain"></i> Estimulación del sistema nervioso central</h3>
-                <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando energía.</p>
+                <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando
+                    energía.</p>
             </div>
 
             <div class="beneficio" data-aos="fade-left">
@@ -58,19 +63,21 @@
 
             <div class="beneficio" data-aos="fade-right">
                 <h3><i class="fas fa-heartbeat"></i> Prevención de enfermedades cardiovasculares</h3>
-                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y reducir los niveles de colesterol malo.</p>
+                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y
+                    reducir los niveles de colesterol malo.</p>
             </div>
         </section>
-<!--Seccion de prodcutos destacados-->
+        <!--Seccion de prodcutos destacados-->
         <section>
 
-            <h2 class="titulos">DESTACADOS</h2> 
+            <h2 class="titulos">DESTACADOS</h2>
             <div class="tarjetas" data-aos="zoom-out-up">
                 <div class="card tarjetas2">
                     <img src="./assets/productos/mateImperial.jpg" class="card-img-top" alt="imagen de imperial marron">
                     <div class="card-body">
                         <h5 class="card-title">MATES</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
+                            dolor culpa</p>
                         <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
@@ -78,7 +85,8 @@
                     <img src="./assets/productos/termo1.jpg" class="card-img-top" alt="imagen de termo negro">
                     <div class="card-body">
                         <h5 class="card-title">TERMOS</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
+                            dolor culpa</p>
                         <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
@@ -86,46 +94,50 @@
                     <img src="./assets/productos/cuchillo1.png" class="card-img-top" alt="imagen de cuchillo">
                     <div class="card-body">
                         <h5 class="card-title">CUCHILLOS</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
+                            dolor culpa</p>
                         <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
             </div>
         </section>
-    </main> 
+    </main>
     <footer class="pie_de_pagina">
         <div class="pie_de_pagina_grid">
-            <div class="redes">
-            <h3>NUESTRAS REDES</h3>
-
-            <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
-            <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
-            <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
-            </div>
-            <div>
+            <div class="contactenos">
                 <h3>Contactenos</h3>
                 <p>Telefono: 11-33665545 </p>
                 <p>Direccion: AV DIAZ MOSCONI 1524 </p>
                 <p>Localidad: LOMAS DEL MIRADOR </p>
-                <p>Provincia : BS AS  </p>
+                <p>Provincia : BS AS </p>
                 <p>Correo Electronico: HGMATES@GMAIL.COM </p>
             </div>
-            <div>
-                <h3>NEWSLETTER</h3>
-                <P>SUSCRIBASE </p>
+            <div class="redes">
+                <h3>Nuestras Redes</h3>
+                <div>
+                    <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
+                    <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
+                </div>
+            </div>
+
+            <div class="newsletter">
+                <h3>Newsletter</h3>
+                <P>Suscribase</p>
                 <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
-                <input type="submit" value="Suscribir">
+                    <input type="submit" value="Suscribir">
                 </form>
             </div>
         </div>
         <div class="pie_de_pagina_copy">
             <p>Diseño por Jonatan</p>
-        </div>    
+        </div>
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
