cambios generales para entrega final2

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -79,33 +79,34 @@
     </main>
     <footer class="pie_de_pagina">
         <div class="pie_de_pagina_grid">
-            <div class="redes">
-                <h3>NUESTRAS REDES</h3>
-                <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
-                <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
-                <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
-            </div>
-
-            <div>
+            <div class="contactenos">
                 <h3>Contactenos</h3>
                 <p>Telefono: 11-33665545 </p>
                 <p>Direccion: AV DIAZ MOSCONI 1524 </p>
                 <p>Localidad: LOMAS DEL MIRADOR </p>
-                <p>Provincia : BS AS  </p>
+                <p>Provincia : BS AS </p>
                 <p>Correo Electronico: HGMATES@GMAIL.COM </p>
-                </p>
             </div>
-            <div>
-                <H3>NEWSLETTER</H3>
-                <P>SUSCRIBASE </P>
-                <form method="post" action="/send"> CORREO: <input name="correo">
-                <input type="submit" value="Suscribir">
+            <div class="redes">
+                <h3>Nuestras Redes</h3>
+                <div>
+                    <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
+                    <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
+                </div>
+            </div>
+
+            <div class="newsletter">
+                <h3>Newsletter</h3>
+                <P>Suscribase</p>
+                <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
+                    <input type="submit" value="Suscribir">
                 </form>
             </div>
         </div>
         <div class="pie_de_pagina_copy">
             <p>Diseño por Jonatan</p>
-        </div>    
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
