--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,154 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <!--Link archivos de estilos-->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css" />
     <!--Link de bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>HG MATES - PRODUCTOS</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-custom px-3">
-    <!--Este es el titulo de mi pagina-->
-                <h1 class="titulos">HGMATES</h1>
-                <img id="logo_principal" src="../assets/logos/logoHG.png" alt="Logo marca">
+      <nav class="navbar navbar-expand-lg navbar-custom px-3">
+        <!--Este es el titulo de mi pagina-->
+        <h1 class="titulos">HGMATES</h1>
+        <img
+          id="logo_principal"
+          src="../assets/logos/logoHG.png"
+          alt="Logo marca"
+        />
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarMain"
+          aria-controls="navbarMain"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarMain">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="clientes.html">Clientes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ppff.html">Preguntas Frecuentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                </ul>
-                <div class="icono-contenedor">
-                    <i class="fas fa-user-circle icono"></i> 
-                    <i class="fas fa-shopping-cart icono"></i>
-                </div>
-            </div>
-        </nav>
-   </header>
+        <div class="collapse navbar-collapse" id="navbarMain">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Productos</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="clientes.html">Clientes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ppff.html">Preguntas Frecuentes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+          <div class="icono-contenedor">
+            <i class="fas fa-user-circle icono"></i>
+            <i class="fas fa-shopping-cart icono"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
-        <section>
-            <div>   
-                <div class="container mt-4">
-                    <div class="row">
-                        <div class="col-md-3">
-                        <h5 class="mb-3">Filtrar por categoría</h5>
-                            <div class="list-group">
-                            <!-- MATES con subcategorías -->
-                                <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#matesSub" role="button" aria-expanded="false" aria-controls="matesSub">
-                                MATES
-                                </a>
-                                    <div class="collapse ms-3" id="matesSub">
-                                        <a href="#" class="list-group-item list-group-item-action">IMPERIALES</a>
-                                        <a href="#" class="list-group-item list-group-item-action">CAMIONEROS</a>
-                                        <a href="#" class="list-group-item list-group-item-action">TORPEDOS</a>
-                                        <a href="#" class="list-group-item list-group-item-action">OTROS</a>
-                                    </div>
+      <div class="contenedor">
+        <aside class="filtros">
+          <h3>Filtrar por categoría</h3>
+          <ul>
+            <li class="categoria">
+              Mates
+              <ul class="subcategorias">
+                <li>Imperial</li>
+                <li>Camionero</li>
+              </ul>
+            </li>
+            <li class="categoria">
+              Bombillas
+              <ul class="subcategorias">
+                <li>Alpaca</li>
+                <li>Inoxidable</li>
+              </ul>
+            </li>
+            <li class="categoria">
+              Termos
+              <ul class="subcategorias">
+                <li>Color</li>
+                <li>Stanley</li>
+              </ul>
+            </li>
+            <li>Accesorios</li>
+            <li>Canastas</li>
+            <li>Asados</li>
+            <li>Tablas</li>
+            <li>Cuchillos</li>
+            <li>Pala</li>
+          </ul>
+          <div class="ordenar">
+            <label for="ordenar">Ordenar por</label>
+            <select id="ordenar" name="ordenar">
+              <option value="precio-asc">Precio: menor a mayor</option>
+              <option value="precio-desc">Precio: mayor a menor</option>
+              <option value="nombre-asc">Nombre: A-Z</option>
+              <option value="nombre-desc">Nombre: Z-A</option>
+            </select>
+          </div>
 
-                                <!-- Categorías sin subniveles -->
-                                <a href="#" class="list-group-item list-group-item-action">CANASTAS</a>
-                                <a href="#" class="list-group-item list-group-item-action">BOMBILLAS</a>
-                                <a href="#" class="list-group-item list-group-item-action">TERMOS</a>
-                                <a href="#" class="list-group-item list-group-item-action">ACCESORIOS</a>
+          <div class="rango-precio">
+            <label for="precio-min">Precio mínimo</label>
+            <input type="number" id="precio-min" placeholder="$0" />
 
-                                <!-- ASADOS con subcategorías -->
-                                <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#asadosSub" role="button" aria-expanded="false" aria-controls="asadosSub">
-                                ASADOS
-                                </a>
-                                    <div class="collapse ms-3" id="asadosSub">
-                                        <a href="#" class="list-group-item list-group-item-action">TABLAS</a>
-                                        <a href="#" class="list-group-item list-group-item-action">CUCHILLOS</a>
-                                    </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>            
-            <div class="productos-container">
-            <div class="producto animate__zoomInRight">
-                <img src="../assets/productos/imperial1.JPG" alt="">
-                <div>
-                <h3>Mate Imperial</h3>
-                <span>$ 2000 - 10% abonando en efectivo</span>
-                <button>Agregar a carrito</button>
-                </div>
-            </div>
+            <label for="precio-max">Precio máximo</label>
+            <input type="number" id="precio-max" placeholder="$5000" />
+          </div>
+        </aside>
 
-            <div class="producto animate__zoomInRight">
-                <img src="../assets/productos/imperial2.JPG" alt="">
-                <div>
-                <h3>Mate Imperial</h3>
-                <span>$ 2040 - 10% abonando en efectivo</span>
-                <button>Agregar a carrito</button>
-                </div>
-            </div>
-
-            <div class="producto animate__zoomInRight">
-                <img src="../assets/productos/camionero1.jpg" alt="">
-                <div>
-                <h3>Mate Camionero</h3>
-                <span>$ 3000 - 10% abonando en efectivo</span>
-                <button>Agregar a carrito</button>
-                </div>
-            </div>
-
-            <div class="producto animate__zoomInRight">
-                <img src="../assets/productos/camionnero2.JPG" alt="">
-                <div>
-                <h3>Mate Camionero</h3>
-                <span>$ 3000 - 10% abonando en efectivo</span>
-                <button>Agregar a carrito</button>
-                </div>
-            </div>
-            </div>
+        <section class="productos">
+          <!-- Tarjetas de productos -->
+          <div class="producto-card">
+            <img src="../assets/productos/imperial2.JPG" alt="Mate Imperial" />
+            <h4>Mate Imperial</h4>
+            <p>$2000</p>
+            <p class="descuento">10% abonando en efectivo</p>
+            <button>Agregar a carrito</button>
+          </div>
+          <div class="producto-card">
+            <img src="../assets/productos/camionero1.jpg" alt="Mate Imperial" />
+            <h4>Mate Imperial</h4>
+            <p>$2400</p>
+            <p class="descuento">10% abonando en efectivo</p>
+            <button>Agregar a carrito</button>
+          </div>
+          <div class="producto-card">
+            <img
+              src="../assets/productos/camionnero2.JPG"
+              alt="Mate Imperial"
+            />
+            <h4>Mate Camionero</h4>
+            <p>$3000</p>
+            <p class="descuento">10% abonando en efectivo</p>
+            <button>Agregar a carrito</button>
+          </div>
+          <div class="producto-card">
+            <img
+              src="../assets/productos/camionnero2.JPG"
+              alt="Mate Imperial"
+            />
+            <h4>Mate Camionero</h4>
+            <p>$3500</p>
+            <p class="descuento">10% abonando en efectivo</p>
+            <button>Agregar a carrito</button>
+          </div>
         </section>
+      </div>
     </main>
     <footer class="pie_de_pagina">
-        <div class="pie_de_pagina_grid">
-            <div class="contactenos">
-                <h3>Contactenos</h3>
-                <p>Telefono: 11-33665545 </p>
-                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
-                <p>Localidad: LOMAS DEL MIRADOR </p>
-                <p>Provincia : BS AS </p>
-                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
-            </div>
-            <div class="redes">
-                <h3>Nuestras Redes</h3>
-                <div>
-                    <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
-                    <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
-                </div>
-            </div>
+      <div class="pie_de_pagina_grid">
+        <div class="contactenos">
+          <h3>Contactenos</h3>
+          <p>Telefono: 11-33665545</p>
+          <p>Direccion: AV DIAZ MOSCONI 1524</p>
+          <p>Localidad: LOMAS DEL MIRADOR</p>
+          <p>Provincia : BS AS</p>
+          <p>Correo Electronico: HGMATES@GMAIL.COM</p>
+        </div>
+        <div class="redes">
+          <h3>Nuestras Redes</h3>
+          <div>
+            <a
+              href="https://www.instagram.com/hgmates"
+              target="_blank"
+              class="fa-brands fa-instagram"
+            ></a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="fa-brands fa-facebook"
+            ></a>
+            <a
+              href="https://www.tiktok.com"
+              target="_blank"
+              class="fa-brands fa-tiktok"
+            ></a>
+          </div>
+        </div>
 
-            <div class="newsletter">
-                <h3>Newsletter</h3>
-                <P>Suscribase</p>
-                <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
-                    <input type="submit" value="Suscribir">
-                </form>
-            </div>
+        <div class="newsletter">
+          <h3>Newsletter</h3>
+          <p>Suscribase</p>
+          <form method="post" action="/send" class="Newsletter">
+            CORREO: <input name="correo" />
+            <input type="submit" value="Suscribir" />
+          </form>
         </div>
-        <div class="pie_de_pagina_copy">
-            <p>Diseño por Jonatan</p>
-        </div>
+      </div>
+      <div class="pie_de_pagina_copy">
+        <p>Diseño por Jonatan</p>
+      </div>
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      document.querySelectorAll(".categoria").forEach((item) => {
+        item.addEventListener("click", () => {
+          item.classList.toggle("open");
+        });
+      });
+    </script>
+  </body>
 </html>
